php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #48762 IPv6 address filter still rejects valid address
Submitted: 2009-07-01 23:29 UTC Modified: 2009-07-16 23:30 UTC
From: valli at icsurselva dot ch Assigned: felipe (profile)
Status: Closed Package: Filter related
PHP Version: 5.2.10 OS: Gentoo Linux
Private report: No CVE-ID: None
 [2009-07-01 23:29 UTC] valli at icsurselva dot ch
Description:
------------
The IPv6 address filter in the filter extension still
rejects valid IPv6 address notations. E.g.:
::67:78b:34.43.43.2
0b15:23::3:67.98.234.17

(This Bug was probably introduced while fixing
http://bugs.php.net/bug.php?id=46973)

Reproduce code:
---------------
var_dump(filter_var('0b15:23::3:67.98.234.17',
FILTER_VALIDATE_IP,FILTER_FLAG_IPV6));

Expected result:
----------------
0b15:23::3:67.98.234.17

Actual result:
--------------
false

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2009-07-13 19:10 UTC] jani@php.net
Felipe, please check this out too while fixing the other bugs in this 
same thing..
 [2009-07-16 23:30 UTC] felipe@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.

Fixed in 5.2, 5.3 and HEAD.
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Sat Sep 26 01:00:01 2026 UTC