- Fixed bug #48762 (IPv6 address filter still rejects valid address)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@284211 c90b9560-bf6c-de11-be94-00142212c4b1